--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- The Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
-    <!-- <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script> -->
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
     <script src="./site/js/firebase.js"></script>
   </body>
 </html>
