--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://galiprandi.github.io/css-toolset.css/css-toolset.css"
+      href="//galiprandi.github.io/css-toolset.css/css-toolset.css"
     />
     <link rel="stylesheet" href="./site/css/main.css" />
     <style>
@@ -28,9 +28,9 @@
     <script defer src="./site/js/main.js"></script>
 
     <!-- The Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+    <script src="//www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <!-- <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script> -->
-    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
+    <script src="//www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
     <script src="./site/js/firebase.js"></script>
   </body>
 </html>
