--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fotografos de Argentina</title>
+    <title>Fotógrafos Argentinos</title>
+    <meta name="description" content="Comunidad Argentina de Fotógrafos" />
+
     <link
       rel="shortcut icon"
-      href="./site/imagenes/favicon.svg"
+      href="site/imagenes/favicon.ico"
       type="image/x-icon"
     />
+    <link rel="manifest" href="./" />
     <link
       rel="stylesheet"
       href="//galiprandi.github.io/css-toolset.css/css-toolset.css"
