Login en la barra

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link
       rel="shortcut icon"
-      href="site/imagenes/favicon.ico"
+      href="site/imagenes/logo.svg"
       type="image/x-icon"
     />
     <link rel="manifest" href="./" />
