--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fotógrafos Argentinos</title>
     <meta name="description" content="Comunidad Argentina de Fotógrafos" />
-
+    <meta property="og:image" content="/site/imagenes/logo.png" />
+    <meta property="og:url" content="fotógrafos.com.ar" />
     <link
       rel="shortcut icon"
       href="site/imagenes/logo.svg"
