--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fotógrafos Argentinos</title>
     <meta name="description" content="Comunidad Argentina de Fotógrafos" />
+    <meta property="og:title" content="Fotógrafos Argentinos" />
+    <meta
+      property="og:description"
+      content="Comunidad Argentina de Fotógrafos"
+    />
     <meta property="og:image" content="/site/imagenes/logo.png" />
     <meta property="og:url" content="fotógrafos.com.ar" />
     <link
