--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       content="Comunidad Argentina de Fotógrafos"
     />
     <meta property="og:image" content="/site/imagenes/logo.png" />
-    <meta property="og:url" content="fotógrafos.com.ar" />
+    <meta property="og:url" content="https://fotógrafos.com.ar/" />
     <link
       rel="shortcut icon"
       href="site/imagenes/logo.svg"
