--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="site/imagenes/logo.svg"
       type="image/x-icon"
     />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="manifest" href="./" />
     <link
       rel="stylesheet"
@@ -28,7 +29,7 @@
         color: var(--text);
 
         --text: #011627;
-        --hover: #e63946;
+        --hover: #b5191a;
         --border-radius: 4px;
       }
     </style>
