--- a/index.html
+++ b/index.html
@@ -24,13 +24,22 @@
       href="//galiprandi.github.io/css-toolset.css/css-toolset.css"
     />
     <link rel="stylesheet" href="./site/css/main.css" />
+
     <style>
+      @import url("https://fonts.googleapis.com/css2?family=Gilda+Display&display=swap");
+
       :root {
         color: var(--text);
 
-        --text: #011627;
+        --text: #241c1c;
         --hover: #b5191a;
         --border-radius: 4px;
+      }
+
+      body {
+        font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+          "Lucida Sans", Arial, sans-serif;
+        color: var(--text);
       }
     </style>
   </head>
