--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       type="image/x-icon"
     />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="manifest" href="./" />
+    <link rel="manifest" href="manifest.json" />
     <link
       rel="stylesheet"
       href="//galiprandi.github.io/css-toolset.css/css-toolset.css"
