--- a/index.html
+++ b/index.html
@@ -10,20 +10,15 @@
       property="og:description"
       content="Comunidad Argentina de Fotógrafos"
     />
-    <meta property="og:image" content="/site/imagenes/logo.png" />
-    <meta property="og:url" content="https://fotógrafos.com.ar/" />
-    <link
-      rel="shortcut icon"
-      href="site/imagenes/logo.svg"
-      type="image/x-icon"
-    />
+    <meta property="og:image" content="site/imagenes/logo.png" />
+    <meta property="og:url" content="https://fotógrafos.com.ar" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="manifest" href="manifest.json" />
     <link
       rel="stylesheet"
       href="//galiprandi.github.io/css-toolset.css/css-toolset.css"
     />
-    <link rel="stylesheet" href="./site/css/main.css" />
+    <link rel="stylesheet" href="site/css/main.css" />
 
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Gilda+Display&display=swap");
@@ -44,12 +39,12 @@
     </style>
   </head>
   <body>
-    <script defer src="./site/js/main.js"></script>
+    <script defer src="site/js/main.js"></script>
 
     <!-- The Firebase SDK -->
     <script src="//www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
+    <script src="//www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
     <script src="//www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
-    <script src="./site/js/firebase.js"></script>
+    <script src="site/js/firebase.js"></script>
   </body>
 </html>
